# Image_processing_app

./: CMakeLists.txt  README.md
aos/: CMakeLists.txt  bitmap_aos.cpp
common/: histogram.cpp  histogram.hpp  imgcmd.hpp  progargs.cpp
soa/: CMakeLists.txt  bitmap_soa.cpp
